--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-"fastapi\nuvicorn\npsycopg2\npgvector\ntransformers\nelasticsearch\nrequests\nbeautifulsoup4\nscrapy" 
+fastapi
+uvicorn
+psycopg2
+pgvector
+transformers
+elasticsearch
+requests
+beautifulsoup4
+scrapy
